Added gethandler in handlerstorage
